@@ -127,6 +127,11 @@ def SRC_FILE = 'template/' + VERSION_JAVA_FILE
 def DST_DIR = 'src/main/java/com/jiro4989/tkfm'
 def DST_FILE = DST_DIR + '/' + VERSION_JAVA_FILE
 
+// Version.javaにバージョン番号とコミットハッシュを埋め込んでコピーする。
+//
+// 環境変数を指定せずにビルドするとdevがデフォルトでセットされる。
+// CIでのビルド時にはタグ番号とコミットハッシュが埋め込まれる。
+// こうすることでタグ番号の二重管理を防ぐことができる。
 task versionSet(type: Copy) {
   doFirst {
     delete DST_FILE
@@ -137,3 +142,59 @@ task versionSet(type: Copy) {
 }
 
 compileJava.dependsOn(['versionSet'])
+
+def libDir = './lib'
+
+task clearDependencies {
+  delete libDir
+}
+
+// dependenciesで取得したjarファイルをlib配下にコピーする。
+//
+// runAppで実行するときにライブラリのパスを指定するために使用する。
+task dumpDependencies(dependsOn: clearDependencies) {
+  doLast {
+    configurations.compileClasspath.each {
+      def jarFile = it.absolutePath
+      copy {
+        from jarFile
+        into libDir
+      }
+    }
+  } 
+} 
+
+def appMods = [
+  'javafx.base',
+  'javafx.controls',
+  'javafx.swing',
+  'javafx.graphics',
+  'javafx.fxml',
+  ]
+
+task runApp(type: Exec, dependsOn: dumpDependencies) {
+  commandLine 'java',
+    '--module-path', libDir,
+    '--add-modules', appMods.join(','),
+    '-jar', 'build/libs/tkfm-dev.jar'
+}
+
+def jmodsDir = './jmods/javafx-jmods-11.0.2'
+def customJREDir = 'jre'
+
+if (project.hasProperty('CI_JMODS_DIR')) {
+  jmodsDir = CI_JMODS_DIR
+}
+
+task clearCustomJRE {
+  delete customJREDir
+}
+
+// カスタムJREを作成する。
+task jlink(type: Exec, dependsOn: clearCustomJRE) {
+  commandLine 'jlink',
+    '--module-path', jmodsDir,
+    '--add-modules', appMods.join(','),
+    '--compress=2',
+    '--output', customJREDir
+}
